feat: stable version before migration